--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ matrix:
       install:
         - pip install -r requirements.txt
       script:
-        - pylint **/*.py --load-plugins pylint-django
+        - pylint **/*.py --load-plugins pylint_django
         - coverage run --source='.' manage.py test
         - coverage xml
